# PHiLe

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  clippy.toml
doc/examples/: File.phi  User.phi  foo.phi  functions.phi  no_pointer_class.phi  rel.phi  simple.phi  tricky_binops.phi
libphile/: Cargo.toml
libphile/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  sqir.rs  sqirgen.rs  sqiropt.rs  util.rs
libphile/src/dalgen/: mod.rs
libphile/src/dalgen/c/: mod.rs
libphile/src/dalgen/csharp/: mod.rs
libphile/src/dalgen/cxx/: mod.rs
libphile/src/dalgen/go/: mod.rs  mongodb.rs
libphile/src/dalgen/haskell/: mod.rs
libphile/src/dalgen/java/: mod.rs
libphile/src/dalgen/js/: mod.rs
libphile/src/dalgen/objc/: mod.rs
libphile/src/dalgen/python/: mod.rs
libphile/src/dalgen/ruby/: mod.rs
libphile/src/dalgen/rust/: mod.rs
libphile/src/dalgen/swift/: mod.rs
libphile/src/sqirgen/: helper.rs  mod.rs
libphile/tests/: lexer.rs  parser.rs  sqirgen.rs
libphile/tests/common/: mod.rs
philec/: Cargo.toml
philec/src/: main.rs
src/: ast.rs  codegen.rs  declgen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  qir.rs  qirgen.rs  qiropt.rs  querygen.rs  schemagen.rs  semanal.rs  sqir.rs  sqirgen.rs  sqiropt.rs  util.rs  wrapgen.rs
src/dalgen/: mod.rs
src/dalgen/c/: mod.rs
src/dalgen/cxx/: mod.rs
src/dalgen/go/: mariadb.rs  mod.rs  mongodb.rs  mongodb_template.txt  sqlite3.rs
src/dalgen/java/: mod.rs
src/dalgen/js/: mod.rs
src/dalgen/mariadb/: mod.rs
src/dalgen/mongodb/: c.rs  cxx.rs  go.rs  go_template.txt  java.rs  js.rs  mod.rs  objc.rs  python.rs  rust.rs  swift.rs
src/dalgen/objc/: mod.rs
src/dalgen/python/: mod.rs
src/dalgen/rust/: mod.rs
src/dalgen/sqlite3/: mod.rs
src/dalgen/swift/: mod.rs
src/declgen/: c.rs  cxx.rs  go.rs  java.rs  js.rs  mod.rs  objc.rs  python.rs  rust.rs  swift.rs
src/querygen/: mod.rs
src/querygen/maria/: mod.rs
src/querygen/mariadb/: mod.rs
src/querygen/mongo/: mod.rs
src/querygen/mongodb/: c.rs  cxx.rs  go.rs  java.rs  js.rs  mod.rs  objc.rs  python.rs  rust.rs  swift.rs
src/querygen/sqlite3/: mod.rs
src/schemagen/: mod.rs
src/schemagen/maria/: mod.rs
src/schemagen/mariadb/: mod.rs
src/schemagen/mongo/: mod.rs
src/schemagen/mongodb/: c.rs  cxx.rs  go.rs  go_template.txt  java.rs  js.rs  mod.rs  objc.rs  python.rs  rust.rs  swift.rs
src/schemagen/sqlite3/: mod.rs
src/typewriter/: c.rs  cxx.rs  go.rs  java.rs  js.rs  mod.rs  objc.rs  python.rs  rust.rs  swift.rs
tests/: lexer.rs  parser.rs  tests.rs
