[package]
name          = "phile"
version       = "0.1.0"
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/PHiLe.git"
homepage      = "http://h2co3.org"
license       = "BSD"
readme        = "README.md"
documentation = "https://h2co3.github.io/"
description   = "The Painless High-Level Persistence Engine"

[dependencies]
clap                 = "2.23.3"
unicode-segmentation = "1.1.0"
regex                = "0.2.1"
