[package]
name          = "phile"
version       = "0.1.0"
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/PHiLe.git"
homepage      = "https://h2co3.github.io/phile"
license       = "BSD"
readme        = "README.md"
documentation = "https://h2co3.github.io/phile/docs"
description   = "The Painless High-Level Persistence Engine"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.bench]
panic = "abort"

[profile.doc]
panic = "abort"

[dependencies]
clap                 = "2.25.1"
unicode-segmentation = "1.1.0"
regex                = "0.2.2"
heck                 = "0.2.1"
