[package]
name          = "phile"
version       = "0.1.3" # remember to update html_root_url in lib.rs and main.rs
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/PHiLe.git"
homepage      = "https://h2co3.github.io/phile/"
license       = "BSD-2-Clause-FreeBSD"
readme        = "../README.md"
documentation = "https://docs.rs/phile"
description   = "The Painless High-Level Persistence Engine"
keywords      = ["database", "orm", "storage", "codegen", "dsl"]
categories    = ["command-line-interface", "command-line-utilities", "database", "database-implementations", "development-tools"]

[dependencies]
unicode-segmentation = "1.2.0"
regex                = "0.2.2"
heck                 = "0.3.0"

[dev-dependencies]
quickcheck  = "0.4.1"
unicode-xid = "0.1.0"
lazy_static = "0.2.8"
rand        = "0.3.16"
itertools   = "0.6.3"

[badges]
travis-ci = { repository = "H2CO3/PHiLe" }
codecov = { repository = "H2CO3/PHiLe", service = "github" }
maintenance = { status = "actively-developed" }
