[package]
name          = "philec"
version       = "0.1.2" # remember to update html_root_url in lib.rs and main.rs
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/PHiLe.git"
homepage      = "https://h2co3.github.io/phile/"
license       = "BSD-2-Clause-FreeBSD"
readme        = "../README.md"
documentation = "https://docs.rs/philec"
description   = "The Painless High-Level Persistence Engine"
keywords      = ["database", "orm", "storage", "codegen", "dsl"]
categories    = ["command-line-interface", "command-line-utilities", "database", "database-implementations", "development-tools"]

[dependencies]
phile = { version = "0.1.2", path = "../libphile" }
clap  = "2.26.2"
